@@ -264,12 +264,12 @@ export default function cli() {
 		
 	// Test Command.
 	// Ensure this is commented out.
-	program.command('test')
+	/*program.command('test')
 		.description('Test commands on a WordPress environment')
 		//.addArgument(envArg)
 		.allowUnknownOption(true)
 		.action(withSpinner(env.test))
-		
+	*/
 	
 	addWPEnvCommands();
 
