@@ -25,8 +25,7 @@ import {
 	convertToMultisite,
 	generateHTAccess,
 	getTaxonomies,
-    createTaxonomies,
-    axiosErrorHandler
+    createTaxonomies
 } from './wordpress/index.js';
 
 export {
@@ -50,6 +49,5 @@ export {
 	convertToMultisite,
 	generateHTAccess,
 	getTaxonomies,
-    createTaxonomies,
-    axiosErrorHandler
+    createTaxonomies
 }
