@@ -1,5 +1,9 @@
+/**
+ * External dependencies
+ */
 import chalk from 'chalk';
 import ora from 'ora';
+import terminalLink from  'terminal-link';
 
 // Colors.
 const boldWhite = chalk.bold.white;
@@ -48,7 +52,25 @@ const withSpinner =
 				process.exit( 0 );
 			},
 			( error ) => {
-				if( error ){
+
+				// Axios Error
+				if( error &&
+					'object' === typeof error &&
+					'response' in error &&
+					'request' in error 
+				){
+
+					let { data, status } = error.response;
+					
+					if( 401 === status ){
+						data.message +=  `\nPlease check your ${terminalLink('Application Password', 'https://make.wordpress.org/core/2020/11/05/application-passwords-integration-guide/')}`;
+					}
+
+					spinner.fail( data.message )
+					process.exit( 1 );
+					
+
+				}else if( error ){
 					// Error is an unknown error. That means there was a bug in our code.
 					spinner.fail(
 						typeof error === 'string' ? error : error.message
@@ -56,10 +78,13 @@ const withSpinner =
 					// Disable reason: Using console.error() means we get a stack trace.
 					console.error( error );
 					process.exit( 1 );
+
 				}else{
 					spinner.fail( 'An unknown error occurred.' );
 					process.exit( 1 );
+
 				}
+
 			}
 		);
 	};
