@@ -235,14 +235,13 @@ async function createTaxonomies( taxData, request, tax = 'pages', spinner ){
                 data: 'media' === tax ? createMediaItem(obj) : obj,
                 url
             })
-            .then( async (res) => { return res.data; }, axiosErrorHandler )
+            .then( async (res) => { return res.data; } )
 
             
         /**
          * if the obj had an existing ID that didn't exist
          */
         if( existingID ){
-            sleep(1000)
             let post_tbl = 'wp_posts';
             let post_meta_tbl = 'wp_postmeta';
             let term_taxonomy_tbl = 'wp_term_taxonomy';
@@ -386,38 +385,8 @@ function createMediaItem( media ){
     return fd;
 }
 
-function axiosErrorHandler( error ){
-
-    if (error.response) {
-        // The request was made and the server responded with a status code
-        // that falls out of the range of 2xx
-        let { data, status } = error.response;
-
-        switch( status ){
-            case 401: // Invalid Credentials
-                data.message +=  `\nPlease check your ${terminalLink('Application Password', 'https://make.wordpress.org/core/2020/11/05/application-passwords-integration-guide/')}`;
-            case 404: // Not Found
-                //spinner.fail( `${data.message}` )
-                //console.log('Error', `${data.message}`);
-                //console.log('Error', `${data}`);
-                //process.exit(1)
-            default:
-                console.log('Error', error.response);
-                break;
-        }
-    } else if (error.request) {
-        // The request was made but no response was received
-        // `error.request` is an instance of XMLHttpRequest in the browser and an instance of
-        // http.ClientRequest in node.js
-        console.log(error.request);
-    } else {
-        // Something happened in setting up the request that triggered an Error
-        console.log('Error', error.message);
-    }
-}
 
 export {
     getTaxonomies,
-    createTaxonomies,
-    axiosErrorHandler
+    createTaxonomies
 }
