@@ -2,7 +2,7 @@ import { activateCAWeb, configureCAWeb } from "./caweb.js";
 import { downloadSources } from "./download-sources.js";
 import { configureDivi, isDiviThemeActive } from "./divi.js";
 import { configureWordPress, isMultisite, convertToMultisite, generateHTAccess } from "./wordpress.js";
-import { getTaxonomies, createTaxonomies, axiosErrorHandler }  from "./api.js";
+import { getTaxonomies, createTaxonomies }  from "./api.js";
 
 export {
     activateCAWeb,
@@ -15,6 +15,5 @@ export {
 	convertToMultisite,
 	generateHTAccess,
 	getTaxonomies,
-    createTaxonomies,
-    axiosErrorHandler
+    createTaxonomies
 }
